crates/tests/src/snapshots/fe_compiler_tests__compile_errors__duplicate_arg_in_contract_method.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: a function argument with the same name already exists
  ┌─ fixtures/compile_errors/duplicate_arg_in_contract_method.fe:2:26
  │
2 │     pub def bar(foo: u8, foo:u8):
  │                          ^^^^^^ Conflicting definition of function argument `foo`
  │
  = Note: Give one of the `foo` function arguments a different name


